Bepro 1616 redesign warning on proposal page (#46)
* adjusting contextual-span to new design

* adjusting proposal-action-card to new design

* adding translations

* adding -sm in ball styles

* adding new logic to ball

* removing text-center control

* adjusting conditions

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -791,6 +791,11 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
   &.tag {
     background-color:#B3B9F4;
   }
+  &-sm {
+    width: 4px !important;
+    height: 4px !important;
+    border-radius: 50% !important;
+  }
 }
 
 .active-description-button {
@@ -896,6 +901,10 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
 
 .font-weight-500 {
   font-weight: 500 !important;
+}
+
+.font-weight-400 {
+  font-weight: 400 !important;
 }
 
 .font-weight-medium {
