Bepro 1625 big token names breakes frontend layout (#52)
* Creating Symbol component and styles

* adjusting input-number to new symbol

* adding text-truncate to balance

* adjusting big symbols bounty-distribution-item

* adjusting translations params

* adjusting big symbols transactions-list

* adjusting translations symbol

* adjusting max-with symbol

* adding className param in Symbol component

* adding symbol logic to network-item

* adjusting symbol component to use styles

* adding text-truncate to issue-amount-info

* adjusting symbols in voting power

* adding logic symbol to bounty-distriibution-item

* adjusting page-hero to symbol logic

* adjusting proposal-progress to new symbol logic

* adjusting component token to token-symbol

* adjusting import names

* adding new constants to tokenSymbol

* adjusting imports, name and pastes TokenSymbolView

* fix oracles-actions modal

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2002,6 +2002,10 @@ input[type="color"] {
   max-width: none !important;
 }
 
+.token-symbol {
+  max-width: 120px;
+}
+
 .kyc-modal-body{
   min-height: 630px !important;
 }
