Bepro 1662 bounty details page mobile (#55)
* adjusting comment to new color and size

* adjusting issue-comments to mobile and tablet

* adjusting issue-description to mobile and tablet

* adjusting issue-progress to mobile and tablet

* adjusting issue-body to mobile and tablet

* adjusting the bounty folders

* adjusting containers and alignments

* removing styles in banner-shadow

* adding min-w-bounty-hero class

* adjusting bounty-hero to mobile and tablet

* adding flex-wrap to bounty-tags

* adding new logic to connect-github component

* adjusting inital logic to page-actions

* adding create-proposal-modal to paste proposal

* adding new param to RowWithTwoColumns component

* adjusting FundingSection to mobile and tablet

* adjusting page-actions to new locale and logic

* adjusting pastes

* refactoring bounty-hero pastes and logic

* refactoring pastes and logic bounty-settings

* adjusting import and if bountyHeroView

* adjusting pastes and import bountyHero

* refactoring pastes and name BountyTagsView

* refactoring pastes and logic amount-info

* refactoring pastes and name BountyAvatarsView

* refactoring pastes and logic BountyBody

* refactoring pastes and logic BountyComments

* refactoring pastes and logic BountyDescription

* refactoring pastes and logic BountyEditTag

* refactoring pastes and logic PageActions

* refactoring pastes and logic status-progress

* refactoring pastes and logic FundingSection

* refactoring pastes and logic FundModal

* refactoring pastes and logic FundingProgress

* refactoring pastes & logic RetractOrWithdrawModal

* adjusting import and name minimals

* removing unused files

* adjusting import minimals on proposal-disputes

* adjusting name and imports page-actions interface

* refactoring page-actions logic and conditions

* adjusting logic PageActionsView

* changing render githubPath bountyHeroView

* refatoring bounty page

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -460,6 +460,10 @@ li {
   border-bottom: 1px solid $dark-gray;
 }
 
+.min-w-bounty-hero {
+  min-height: 164px;
+}
+
 // Todo: check if can move to boostrap
 .price-conversor {
   &:hover {
