Bepro 1638 bounty page pull requests and proposals list mobile (#44)
* adding logic tablet support in item-row

* adding logic tablet support to item-sections

* creating reviews-number component

* adjusting tabs to real bg figma

* adjusting id to center

* adjusting tabbed-navigation css

* adjusting item-row to mobile and tablet

* adjusting item-sections to mobile and tablet

* removing className

* refactoring tabs-sections structure and imports

* refactoring item-row logic and imports

* refactoring item-sections logic and imports

* refactoring reviewsNumberView

* adjusting bounty imports

* removing console.log

* fix warning unique key

* fix import bountyAmount

* fix tabbed navigation to mobile

* fix merge

* adjusting order imports

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1357,7 +1357,7 @@ a.row-button svg {
   border: 0;
   border-radius: math.div($m, 2) math.div($m, 2) 0 0;
 
-  background-color: $bg-shadow;
+  background-color: $gray-900;
 
   .nav-item {
     .nav-link {
@@ -1373,11 +1373,11 @@ a.row-button svg {
       padding: 20px;
 
       color: rgba($white, 0.4);
-      background-color: $bg-shadow;
+      background-color: $gray-900;
 
       &.active {
         color: $white;
-        background-color: $dark-gray;
+        background-color: $gray-850;
       }
     }
   }
