Bepro 1634 mobile leaderboard page (#66)
* adding translation

* creating new component for shared list item

* refactoring

* refactoring copy button

* adding gap between items

* adding space

* introducing generic list item

* using new item list component

* adding className prop and initializing observer inside of useEffect

* refactoring leaderboard search endpoint

* getting leaderboard data on server side

* fix missing key

* refactoring leaderboard list component

* refactoring page

* refactoring components

* refactoring list sort component and introducing custom dropdown

* updating icons

* using custom dropdown

* fix invalid rule

* introducing native select wrapper component

* check value

* adding types

* fix rebase conflitcts

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -26,6 +26,8 @@
 @import "components/cookie-consent";
 @import "components/multi-action-button";
 @import "components/horizontal-list";
+@import "components/custom-dropdown";
+@import "components/native-select-wrapper";
 
 @import "components/swagger-ui";
 
