Bepro 1779 clone b mobile bugs (#90)
* fix bounty hall bugs

* responsive padding

* fix sort alignment bug

* fix network name width

* fix bounty page bugs

* fix more bounty page bugs

* fix issue list alignment

* using native select wrapper

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -233,7 +233,6 @@ li {
       background-color: $gray-900;
       z-index: 4;
       padding: 6px;
-      margin-bottom: 50px;
       &-list {
         padding-top: 0;
         padding-bottom: 0;
@@ -1461,6 +1460,12 @@ textarea.form-control {
   hyphens: auto;
 }
 
+.overflow-wrap {
+  &-anywhere {
+    overflow-wrap: anywhere;
+  }
+}
+
 .bounty-settings {
   width: 180px;
 }
@@ -1492,7 +1497,7 @@ textarea.form-control {
 
   &.sticky-top {
     padding: 20px 0;
-    top: 4.4em;
+    top: 4.43em;
   }
 
   .input-group {
