Bepro 1635 mobile bounties page inside a network (#71)
* adding lg logic to issue-list-item

* removing duplicate label and adjusting class

* adding defaultOption to btnContent

* adding  LabelView in tablet and mobile

* fix break big symbol issue-list-item

* fix break big symbol bounty-hero

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -303,8 +303,8 @@ li {
   font-weight: 600;
 }
 
-.mw-github-info {
-  max-width: 235px;
+.mw-repo {
+  max-width: 120px;
 }
 
 .max-width-content {
