--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1496,6 +1496,10 @@ textarea.form-control {
   letter-spacing: 0.1em;
 }
 
+.ls-0 {
+  letter-spacing: 0 !important;
+}
+
 .list-actions {
   border-radius: 0;
 
