Bepro 1647 mobile payments page (#107)
* design adjusts

* mobile design

* handle go to network button

* design adjusts

* more design adjusts

* adding translations

* refactoring payments endpoint

* fix property name

* using server side data

* hide github warning and button if bounty is closed

* more adjusts

* removing console.log

* hide github warning and button if bounty is in draft

* adding new hook and using it for filter

* introducing new component chain filter based on useQueryFilter hook

* refactor new component

* using new filters components

* remove console.log

* use object instead of array, to make easier handle multi params

* fix

* using network primary color

* fix design details

* fix responsive behavior

* use native select wrapper

* refactor payments list component

* introducing mobile payments filters modal

* add missing key

* change key

* finish filters modal

* fix selected index

* handle empty value

* fix condition

* fix bounties listing on management tab

* fix visible parameter

* fix spacing

* adjust spacing

* fix warnings

* fix warnings

* remove unnecessary useEffect

* introducing helper to convert token

* increase ttl

* fetch payments only when all parameters are present

* combine current query with new params

* remove useEffects

* use onChange method

* rename to a more descritive name and add append param

* refactor to a new component

* refactor redirect methods and add translations

* add condition to avoid unnecessary updates

* refactor payments page to new structure

* fix build errors

* fix alignment

* fix after rebase

* fix icon

* more fixes

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -139,7 +139,6 @@ li {
 
 #root-container{
   padding-top: $navbar-height;
-  padding-bottom: $statusbar-height;
 }
 
 .modal {
@@ -573,6 +572,7 @@ label {
 
   background-color: $gray-900;
   border: 1px solid $gray-800;
+  border-radius: 4px;
   color: #fff;
 
   &:disabled,
@@ -1906,7 +1906,7 @@ input[type="color"] {
 
 .profile {
   &-content {
-    min-height: 90vh;
+    min-height: calc(100vh - $navbar-height);
     height: max-content;
     border-left: 1px solid $dark-gray;
   }
