--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2050,6 +2050,7 @@ input[type="color"] {
 }
 
 .select-network-dropdown {
+  min-width: 140px;
   max-width: 168px;
   text-transform: uppercase;
   font-size: 12px;
