--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1736,11 +1736,6 @@ input[type="color"] {
     padding-left: 0;
     padding-right: 0;
 
-    &,
-    > input {
-      border-radius: math.div($m, 2);
-    }
-
     > input {
       padding: 18px 20px;
       border-right: none !important;
@@ -1748,8 +1743,9 @@ input[type="color"] {
 
     &:focus-within {
       .input-group-text {
-        border-left: none !important;
-        background-color: $bg;
+        border: none !important;
+        border-radius: 4px;
+        background-color: $gray-850;
 
         &:not(.border) {
           border: 1px solid var(--bs-primary);
