--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2121,7 +2121,7 @@ input[type="color"] {
 
 .hackerfest-card-bg {
   background: url(../public/images/hackfest-pattern.png), lightgray 50% / cover no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-position-y: center;
   box-shadow: 0px 4px 13px 0px #000;
 }
